...
            onRefresh={refetch}
            tintColor={colors.primary}
          />
        }
      >
        <View style={styles.header}>
          <Text style={styles.greeting}>Hello, {firstName}</Text>
          <View>
            <IconButton
              icon="bell-outline"
              size={24}
              iconColor={colors.primary}
              onPress={() => navigation.navigate(SCREENS.NOTIFICATIONS)}
...
